--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@apollo/client": "^3.4.10",
+    "@vue/apollo-composable": "^4.0.0-alpha.14",
+    "@vue/apollo-option": "^4.0.0-alpha.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-server": "^3.3.0",
+    "core-js": "^3.17.2",
+    "graphql": "^15.5.2",
+    "graphql-tag": "^2.12.5",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
